<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/telephoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone_hint" />

        <EditText
            android:id="@+id/adresseEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adresse_hint" />

        <EditText
            android:id="@+id/villeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ville_hint" />

        <EditText
            android:id="@+id/codePostalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_postal_hint" />

        <EditText
            android:id="@+id/paysEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pays_hint" />

        <EditText
            android:id="@+id/dateNaissanceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_naissance_hint" />

        <EditText
            android:id="@+id/genreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre_hint" />

        <EditText
            android:id="@+id/photoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_hint" />

        <EditText
            android:id="@+id/roleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/role_hint" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_button_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>